# ProjectRerooter

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: mapconfig.json
src/project_rerooter/: __main__.py  cli.py  config.py  engine.py  report.py  rewriter.py  sync.py
tests/: test_cli_flow.py  test_mapping.py  test_rewriter.py
