[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-rerooter"
version = "0.1.0"
description = "CLI tool to sync files across roots with path and namespace remapping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
project-rerooter = "project_rerooter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]